# cppDatabase

./: CMakeLists.txt  README.md  azure-pipelines.yml
client/: CMakeLists.txt  DatabaseClientApi.cpp  DatabaseClientApi.hpp  main.cpp
proto/: data.pb.cc  data.pb.h  data.proto
python_api/: CMakeLists.txt  DatabasePythonApi.cpp
python_api/scripts/: delete.py  get.py  list.py  put.py  putValues.py
server/: CMakeLists.txt  Constants.cpp  Constants.hpp  DataManager.hpp  Database.hpp  DatabaseServerApi.cpp  DatabaseServerApi.hpp  Server.hpp  main.cpp
test/: CMakeLists.txt  main.cpp
